--- a/BoxManager/Properties/Resources.resx
+++ b/BoxManager/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="BoxMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\BoxMenu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
